--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -2,6 +2,7 @@
 
 <h1>The server is running!</h1>
 <p>If you see this text, the server is <strong>definitely</strong> working!</p>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 {{!-- The Data from our Database --}}
 
@@ -27,7 +28,7 @@
 
         {{!-- For each row, print the id, fname, lname, homeworld and age, in order --}}
         {{#each data}}
-        <tr>
+        <tr data-value={{this.customer_id}}>
             <td>{{this.customer_id}}</td>
             <td>{{this.first_name}}</td>
             <td>{{this.last_name}}</td>
@@ -35,10 +36,12 @@
             <td>{{this.notes}}</td>
             <td>{{this.active}}</td>
             <td>{{this.email}}</td>
+            <td><button onclick="deletePerson({{this.customer_id}})">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
 </table>
+<script src="./js/delete_person.js"></script>
 
 {{!-- Form to add a record to the table using AJAX --}}
 <h2>Adding Data with AJAX</h2>
@@ -67,22 +70,3 @@
 
 {{!-- Embed our javascript to handle the DOM manipulation and AJAX request --}}
 <script src="./js/add_person.js"></script>
-
-{{!-- Form to add a record to the table using standard HTML forms --}}
-<h2>Adding Data using an HTML form</h2>
-<p>To add a new person, please enter their information below and click `Submit`!</p>
-<form id="add-person-form" method="POST" action="/add-person-form">
-    <label for="input-fname">First Name: </label>
-    <input type="text" name="input-fname" id="input-fname">
-    
-    <label for="input-lname">Last Name: </label>
-    <input type="text" name="input-lname" id="input-lname">
-
-    <label for="input-homeworld">Homeworld: </label>
-    <input type="number" name="input-homeworld" id="input-homeworld">
-
-    <label for="input-age">Age: </label>
-    <input type="number" name="input-age" id="input-age">
-
-    <input type="submit">
-</form> 
