--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -1,5 +1,16 @@
 {{!-- Just some plain text --}}
-
+<style>
+td {
+    text-align: center;
+    border: 1pt solid black
+}
+table {
+    border: 1pt solid black;
+}
+th {
+    border: 1pt solid black
+}
+</style>
 <h1>The server is running!</h1>
 <p>If you see this text, the server is <strong>definitely</strong> working!</p>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
