--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -4,7 +4,12 @@ td {
     text-align: center;
     border: 1pt solid black
 }
-
+table {
+    border: 1pt solid black;
+}
+th {
+    border: 1pt solid black
+}
 </style>
 <h1>The server is running!</h1>
 <p>If you see this text, the server is <strong>definitely</strong> working!</p>
