--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -4,7 +4,9 @@ td {
     text-align: center;
     border: 1pt solid black
 }
-
+tr {
+    text-align: center;
+}
 </style>
 <h1>The server is running!</h1>
 <p>If you see this text, the server is <strong>definitely</strong> working!</p>
