finished CRUD for Customers

--- a/views/Customer_Memberships.html
+++ b/views/Customer_Memberships.html
@@ -82,12 +82,12 @@
 <head>
     <div align="center" style=" padding-bottom: 10pt; padding-top: 10pt; width:50%; margin-right:25%; margin-left:25%">
         <a href="index.html">Home Page</a>
-        <a href="locations.html">Locations</a>
-        <a href="customers.html">Customers</a>
-        <a href="vendors.html">Vendors</a>
-        <a href="events.html">Events</a>
-        <a href="Customer_Memberships.html">Customer Memberships</a>
-        <a href="vendor_locations.html">Vendor Locations</a>
+        <a href="/locations">Locations</a>
+        <a href="/customers">Customers</a>
+        <a href="/vendors">Vendors</a>
+        <a href="/events">Events</a>
+        <a href="/customer-memberships">Customer Memberships</a>
+        <a href="/vendor-locations">Vendor Locations</a>
     </div>
     <h1>Customer Memberships Page</h1>
 
