added dropdown menus for intersection tables

--- a/views/events.hbs
+++ b/views/events.hbs
@@ -47,7 +47,7 @@
         <label for="input-date">Date: </label>
     <input type="date" name="input-date" id="input-date">
 
-        <label for="input-location">Location: </label>
+        <label for="input-location">Vendor Location: </label>
     <select name="input-location" id="input-location">
         {{#each locations}}
         <option value="{{this.vendor_loc_id}}">{{this.vendor_loc_id}} </option>
