--- a/views/customer_memberships.hbs
+++ b/views/customer_memberships.hbs
@@ -50,11 +50,28 @@
 <h2>Adding a Customer Membership Record</h2>
 <p>To add a new Customer Membership to the database, please enter their information below and click 'Submit'!</p>
 <form id="add-cust-mem-form-ajax">
-    <label for="input-cust-id">Customer Id: </label>
-    <input type="text" name="input-cust-id" id="input-cust-id">
+
+    <label for="input-cust-id">Customer: </label>
+    <select name="input-cust-id" id="input-cust-id">
+        <option value="">Select a Customer</option>
+        {{#each customers}}
+        <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}}</option>
+        {{/each}}
+    </select>
+
+    <label for="input-loc-id">Location: </label>
+    <select name="input-loc-id" id="input-loc-id">
+        <option value="">Select a Location</option>
+        {{#each locations}}
+        <option value="{{this.location_id}}">{{this.name}}</option>
+        {{/each}}
+    </select>
     
-    <label for="input-loc-id">Location Id: </label>
-    <input type="text" name="input-loc-id" id="input-loc-id">
+    {{!-- <label for="input-cust-id">Customer Id: </label> --}}
+    {{!-- <input type="text" name="input-cust-id" id="input-cust-id"> --}}
+    
+    {{!-- <label for="input-loc-id">Location Id: </label> --}}
+    {{!-- <input type="text" name="input-loc-id" id="input-loc-id"> --}}
 
     <label for="input-memb-fee">Monthly Membership Fee: </label>
     <input type="text" name="input-memb-fee" id="input-memb-fee">
@@ -80,11 +97,29 @@
         {{/each}}
     </select>
 
-    <label for="update-cust-id">Customer Id:: </label>
-    <input type="text" name="update-location" id="update-cust-id">
+
+    <label for="update-cust-id">Customer: </label>
+    <select name="update-cust-id" id="update-cust-id">
+        <option value="">Select a Customer</option>
+        {{#each customers}}
+        <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}}</option>
+        {{/each}}
+    </select>
+
 
     <label for="update-location">Location: </label>
-    <input type="text" name="update-location" id="update-location">
+    <select name="update-location" id="update-location">
+        <option value="">Select a Location</option>
+        {{#each locations}}
+        <option value="{{this.location_id}}">{{this.name}}</option>
+        {{/each}}
+    </select>
+
+    {{!-- <label for="update-cust-id">Customer Id:: </label> --}}
+    {{!-- <input type="text" name="update-location" id="update-cust-id"> --}}
+
+    {{!-- <label for="update-location">Location: </label> --}}
+    {{!-- <input type="text" name="update-location" id="update-location"> --}}
 
     <label for="update-membership-fee">Membership Fee: </label>
     <input type="text" name="update-membership-fee" id="update-membership-fee">
