finished aliases on events

--- a/views/events.hbs
+++ b/views/events.hbs
@@ -50,7 +50,7 @@
         <label for="input-location">Vendor Location: </label>
     <select name="input-location" id="input-location">
         {{#each locations}}
-        <option value="{{this.vendor_loc_id}}">{{this.vendor_loc_id}} </option>
+        <option value="{{this.vendor_loc_id}}">{{this.Vendors_vendor_id}} - {{this.Locations_location_id}}</option>
         {{/each}}
     </select>
 
