--- a/views/events.hbs
+++ b/views/events.hbs
@@ -1,7 +1,23 @@
 {{!-- Create a table --}}
+
+<nav align="center" style=" padding-bottom: 10pt; padding-top: 10pt; width:50%; margin-right:25%; margin-left:25%">
+    <a href="index.html">Home Page</a>
+    <a href="/locations">Locations</a>
+    <a href="/customers">Customers</a>
+    <a href="/vendors">Vendors</a>
+    <a href="/events">Events</a>
+    <a href="/customer-memberships">Customer Memberships</a>
+    <a href="/vendor-locations">Vendor Locations</a>
+</nav>
+
+
 <h1>Events</h1>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+
+
+
 
 <table id="event-table">
 
@@ -79,8 +95,6 @@
 
 
     <input type="submit">
-
-
 
 </form>
 
