--- a/views/vendor_locations.hbs
+++ b/views/vendor_locations.hbs
@@ -5,6 +5,16 @@
 {{! Date accessed: 11/8/22 }}
 
 
+<nav align="center" style=" padding-bottom: 10pt; padding-top: 10pt; width:50%; margin-right:25%; margin-left:25%">
+    <a href="index.html">Home Page</a>
+    <a href="/locations">Locations</a>
+    <a href="/customers">Customers</a>
+    <a href="/vendors">Vendors</a>
+    <a href="/events">Events</a>
+    <a href="/customer-memberships">Customer Memberships</a>
+    <a href="/vendor-locations">Vendor Locations</a>
+</nav>
+
 
 <h1>Vendor Locations</h1>
 
