--- a/views/events.hbs
+++ b/views/events.hbs
@@ -98,4 +98,20 @@
 
 </form>
 
+<h2>Filter Events By Customer: </h2>
+<p>Search Events happening at all locations where a Customer is a member</p>
+<form id="search-event-html" method='GET' action='/events'>
+  <label for="event-search">Input Customer: </label>
+  <select name="customer_id" id="event-search">
+    <option value="">Select a Customer</option>
+    {{#each customers}}
+    <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}}</option>
+    {{/each}}
+  </select>
+  <input type="submit">
+  <a href="/events"><button>Reset</button></a>
+  
+</form>
+
+
 <script src="./js/update_event.js"></script>
