--- a/views/customer_memberships.hbs
+++ b/views/customer_memberships.hbs
@@ -4,6 +4,8 @@
 {{! Authors: George Kochera et al. }}
 {{! Date accessed: 11/8/22 }}
 
+<link rel="stylesheet" href="./css/style.css"> 
+
 
 <nav align="center" style=" padding-bottom: 10pt; padding-top: 10pt; width:50%; margin-right:25%; margin-left:25%">
     <a href="index.html">Home Page</a>
