--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -5,6 +5,9 @@
 {{! Date accessed: 11/8/22 }}
 
 
+<link rel="stylesheet" href="./css/style.css"> 
+
+
 <nav align="center" style=" padding-bottom: 10pt; padding-top: 10pt; width:50%; margin-right:25%; margin-left:25%">
     <a href="index.html">Home Page</a>
     <a href="/locations">Locations</a>
