--- a/views/vendors.hbs
+++ b/views/vendors.hbs
@@ -1,5 +1,7 @@
 {{!-- Create a table --}}
 
+<link rel="stylesheet" href="./css/style.css"> 
+
 <nav align="center" style=" padding-bottom: 10pt; padding-top: 10pt; width:50%; margin-right:25%; margin-left:25%">
     <a href="index.html">Home Page</a>
     <a href="/locations">Locations</a>
