--- a/views/vendor_locations.hbs
+++ b/views/vendor_locations.hbs
@@ -14,6 +14,7 @@
     <a href="/vendors">Vendors</a>
     <a href="/events">Events</a>
     <a href="/customer-memberships">Customer Memberships</a>
+    <a href="/membership-add-ons">Membership Add Ons</a>
     <a href="/vendor-locations">Vendor Locations</a>
 </nav>
 
