--- a/views/events.hbs
+++ b/views/events.hbs
@@ -31,9 +31,11 @@
         {{!-- For just the first row, we print each key of the row object as a header cell so we
         know what each column means when the page renders --}}
         <tr>
-            {{#each events.[0]}}
+            {{!--{{#each events.[0]}}--}}
+            {{#each headers}}
             <th>
-                {{@key}}
+                {{!--{{@key}}--}}
+                {{this.header}}
             </th>
             {{/each}}
         </tr>
