--- a/views/vendors.hbs
+++ b/views/vendors.hbs
@@ -28,9 +28,11 @@
         {{!-- For just the first row, we print each key of the row object as a header cell so we
         know what each column means when the page renders --}}
         <tr>
-            {{#each data.[0]}}
+            {{!--{{#each data.[0]}}--}}
+            {{#each headers}}
             <th>
-                {{@key}}
+                {{!--{{@key}}--}}
+                {{this.header}}
             </th>
             {{/each}}
         </tr>
