--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,52 @@
+body {
+  background-color: mintcream;
+  border: 1pt solid black;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 50%;
+}
 
+
+table {
+  border: 1pt solid black;
+  border-collapse: collapse;
+  margin: auto 20%;
+}
+tr {
+  text-align: center;
+}
+th {
+  border: 1pt solid black
+}
 td {
   text-align: center;
   border: 1pt solid black
 }
-table {
-  border: 1pt solid black;
-  border-collapse: collapse;
+h1 {
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  text-align: center;
 }
-th {
-  border: 1pt solid black
+form {
+
+  margin-left: 10%;
+  margin-right: 10%;
+  text-align: center;
+}
+
+h2 {
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
+button {
+  text-align: center;
 }
