--- a/views/locations.hbs
+++ b/views/locations.hbs
@@ -1,3 +1,9 @@
+{{! Code Cited }}
+{{!starter code from osu-cs340 nodejs dev guide; modified to fit Location entity }}
+{{!Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app }}
+{{! Authors: George Kochera et al. }}
+{{! Date accessed: 11/8/22 }}
+
 {{!-- Create a table --}}
 
 <link rel="stylesheet" href="./css/style.css"> 
